# library

./: .gitignore  ChangeLog  License-iccjpeg  Makefile.am  Makefile.in  README  TODO  combotest.cpp  composite.cpp  configtest.cpp  configure  configure.ac  debugtest.cpp  detrack.cpp  dirtreetest.cpp  errorqueuetest.cpp  gprintertest.cpp  hsvtest.cpp  imgsinktest.cpp  imgsrctest.cpp  jpegcheck.cpp  jpegscan.cpp  libtool  mkrgbprofile.cpp  mkthumbnail.cpp  mmmenugfx.cpp  printqueuetest.cpp  profileuitest.cpp  pvtest.cpp  sendserial.cpp  smartptrtest.cpp  stpuitest.cpp  tabui.cpp  threadtest.cpp  whitespread.cpp
argyllsupport/: Makefile.am  argyllbg.h  blackgenselector.cpp  blackgenselector.h  rsplwrapper.h  viewingcondselector.cpp  viewingcondselector.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
gp_cppsupport/: Makefile.am  gpdevicensupport.cpp  gpdevicensupport.h  gprinter.cpp  gprinter.h  gprintersettings.cpp  gprintersettings.h  printerqueueswrapper.cpp  printerqueueswrapper.h  printoutput.cpp  printoutput.h  printoutputselector.cpp  printoutputselector.h
imagesource/: Makefile.am  Makefile.in  devicencolorant.cpp  devicencolorant.h  iccjpeg.cpp  iccjpeg.h  imagesource.cpp  imagesource.h  imagesource_bmp.cpp  imagesource_bmp.h  imagesource_chequerboard.cpp  imagesource_chequerboard.h  imagesource_cms.cpp  imagesource_cms.h  imagesource_colorantmask.h  imagesource_colorize.h  imagesource_crop.cpp  imagesource_devicen_preview.cpp  imagesource_devicen_preview.h  imagesource_devicen_remap.cpp  imagesource_devicen_remap.h  imagesource_dither.cpp  imagesource_downsample.cpp  imagesource_dropshadow.h  imagesource_flatten.cpp  imagesource_gamma.cpp  imagesource_gamma.h  imagesource_gaussianblur.cpp  imagesource_gdkpixbuf.cpp  imagesource_gdkpixbuf.h  imagesource_greyscale.cpp  imagesource_greyscale.h  imagesource_gs.cpp  imagesource_histogram.cpp  imagesource_histogram.h  imagesource_hreflect.cpp  imagesource_hreflect.h  imagesource_hsv.h  imagesource_hsvtorgb.h  imagesource_hsweep.cpp  (+35 more)
imageutils/: Makefile.am  Makefile.in  cachedimage.cpp  cachedimage.h  imagesaver.h  imagesink.h  jpegsave.cpp  jpegsave.h  jpegsaver.cpp  jpegsaver.h  maskpixbuf.cpp  maskpixbuf.h  rotatepixbuf.cpp  rotatepixbuf.h  tiffsave.cpp  tiffsave.h  tiffsaver.cpp  tiffsaver.h
layoutsupport/: Makefile.am  layoutrectangle.h  pageextent.h  signature.cpp  signature.h
miscwidgets/: Makefile.am  Makefile.in  colorantselector.cpp  colorantselector.h  coloranttoggle.cpp  coloranttoggle.h  dab.tif  dabdata.cpp  errordialogqueue.cpp  errordialogqueue.h  generaldialogs.cpp  generaldialogs.h  gtkstub.h  imageselector.cpp  imageselector.h  patheditor.cpp  patheditor.h  pixbuf_from_imagedata.cpp  pixbuf_from_imagedata.h  pixbufview.cpp  pixbufview.h  progressbar.cpp  progressbar.h  progressspinner.cpp  progressspinner.h  refcountui.h  simplecombo.cpp  simplecombo.h  simplelistview.cpp  simplelistview.h  spinner.cpp  spinner.h  spinner1.cpp  spinner1.xcf  spinner2.cpp  spinner3.cpp  spinner4.cpp  spinner5.cpp  spinner6.cpp  spinner7.cpp  (+5 more)
pixbufthumbnail/: Makefile.in  egg-pixbuf-thumbnail.c  egg-pixbuf-thumbnail.h  eggmd5.c  eggmd5.h
po/: ChangeLog  Makefile.in
profilemanager/: Makefile.am  Makefile.in  ciesupport.cpp  ciesupport.h  intentselector.cpp  intentselector.h  lcmswrapper.cpp  lcmswrapper.h  lcmswrapper_lcms2.cpp  lcmswrapper_lcms2.h  md5.cpp  naivetransforms.h  profilemanager.cpp  profilemanager.h  profileselector.cpp  profileselector.h
stp_support/: Makefile.am  Makefile.in  printerqueues.h  printerqueues_unix.c  printerqueues_win32.c  stputil.c
stpui_widgets/: Makefile.am  Makefile.in  activetest  dimension.c  dimension.h  stpui_combo.c  stpui_combo.h  stpui_file.c  stpui_file.h  stpui_optionbook.c  stpui_optionbook.c~  stpui_optionbook.h  stpui_optionpage.c  stpui_optionpage.h  stpui_printerselector.c  stpui_printerselector.h  stpui_queue.c  stpui_queue.h  stpui_slider.c  stpui_slider.h  stpui_toggle.c  stpui_toggle.h  test
support/: Makefile.am  Makefile.in  binaryblob.h  binarysearch.h  breakhandler.cpp  breakhandler.h  configdb.cpp  configdb.h  consumer.cpp  cyclicbuffer.h  debug.cpp  debug.h  dirtreewalker.cpp  dirtreewalker.h  externalprog.h  hackstream.h  imageselector.cpp  jobqueue.h  md5.cpp  md5.h  md5consumer.h  multex.cpp  multex.h  pageextent.h  pathsupport.cpp  pathsupport.h  progress.h  progressbar.cpp  progressbar.h  progresstext.h  ptmutex.cpp  ptmutex.h  refcount.cpp  refcount.h  refcountptr.cpp  refcountptr.h  rs232wrapper.h  rwmutex.cpp  rwmutex.h  searchpath.cpp  (+15 more)
