AM_CFLAGS = -Wall $(GTK2_CFLAGS) $(GP_CFLAGS)
AM_CXXFLAGS = -Wall $(GTK2_CFLAGS) $(GP_CFLAGS)

noinst_LTLIBRARIES = libstpui_widgets.la

libstpui_widgets_la_SOURCES = 		\
	dimension.c				\
	dimension.h				\
	stpui_combo.c			\
	stpui_combo.h			\
	stpui_optionbook.c		\
	stpui_optionbook.h		\
	stpui_optionpage.c		\
	stpui_optionpage.h		\
	stpui_printerselector.c		\
	stpui_printerselector.h		\
	stpui_slider.c			\
	stpui_slider.h			\
	stpui_toggle.c			\
	stpui_toggle.h			\
	stpui_file.c			\
	stpui_file.h			\
	stpui_queue.c			\
	stpui_queue.h			\
	units.h


libstpui_widgets_la_LDFLAGS = -static

